fix contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3953,7 +3953,7 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 		background-color: #f5f5f5;
-		color: #909498;
+		color: black;
 		cursor: default;
 		position: relative;
 		margin: 0 auto;
@@ -4008,7 +4008,7 @@ input, select, textarea {
 		#footer .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #717981;
-			color: #717981 !important;
+			color: black !important;
 		}
 
 			#footer input[type="submit"]:hover,
